[Fix]　Fixed a problem with overflowing text in the breadcrumb list.

--- a/assets/src/css/Components/_breadcrumb.pcss
+++ b/assets/src/css/Components/_breadcrumb.pcss
@@ -6,6 +6,8 @@
     align-items: center;
     display: flex;
     justify-content: flex-start;
+    flex-wrap: wrap;
+    overflow: hidden;
 }
 
 .c-Breadcrumb_navList-Item {
@@ -16,6 +18,7 @@
     text-overflow: ellipsis;
     text-transform: capitalize;
     white-space: nowrap;
+    flex-shrink: 0;
 
     &>* {
         display: inline-block;
